# Qt-QML_connection_between_QML_Cpp

./: CMakeLists.txt  Main.qml  backendhelper.cpp  backendhelper.h  main.cpp
